# hbf-examplecpp

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish-bazel-package.yml  test-renovate.yml
src/: BUILD.bazel  math_operations.cpp  math_operations.h
tests/: BUILD.bazel  test_math_operations.cpp
tools/: BUILD.bazel  format_check.sh  format_fix.sh
